--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 
 	## Measuring Risk
 
-The main problem with risk calculations is that it requires us to predict the future.  
+<p align="left">The main problem with risk calculations is that it requires us to predict the future.</p>
 
 - During stable periods, the past may be a good predictor of the future, so we can use historical data.
+
+	  </textarea>
+	</section>
+
+<section data-markdown>
+	  <textarea data-template>
 
 - In periods of crisis, however, the future may behave differently from the past rendering historical data irrelevant.
 
@@ -71,7 +77,7 @@ The main problem with risk calculations is that it requires us to predict the fu
 
 ## Review of Return Description
 
-To implement any measure of risk we must have a description of how the asset's returns behave.  
+<p align="left">implement any measure of risk we must have a description of how the asset's returns behave.</p> 
 
 - This is described by a probability density function (PDF).  
 
@@ -103,7 +109,7 @@ In the following app you can see how stock returns distributions behaved over di
 
 <section data-background-image="./code_image.jpg">
   <div class="stretch">
-    <iframe src="https://micfm.shinyapps.io/risk_future_past_app1/" height="100%" width="100%"></iframe>
+    <iframe src="https://ztranche.com/portfolio_theory/risk_over_time/" height="100%" width="100%"></iframe>
   </div>
 </section>
 </section>
