--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 	<section>
-	  *For an introduction to risk in financial markets see [A First Look at Risk](https://micfm.shinyapps.io/what_is_risk).*
+	  <p align="left">For an introduction to risk in financial markets see <a href="https://financial-education.github.io/measuring_risk_var/">A First Look at Risk</a>.</p>
 	</section>
 	
 <section data-markdown>
